ex2/testdata/parser/error/minusasg.java
/**
 * Created by alka on 5/11/2017.
 */
class TestCaseserror {
    public static void main(String[] args) {
        -a = v;
    }
}
